# auto-cooler

./: .gitignore  CMakeLists.txt  README.md
Adc/: Adc.c  Adc.h  Adc_Private.h
App/: StateMachine.c  StateMachine.h
GPIO/: GPIO.c  GPIO.h  GPIO_private.h
Lcd/: Lcd.c  Lcd.h  Lcd_private.h
Nvic/: Nvic.c  Nvic.h
Pwm/: Pwm.c  Pwm.h
Rcc/: Rcc.c  Rcc.h  Rcc_Private.h
Timer/: Timer.c  Timer.h  Timer_Private.h
Usart/: Usart.c  Usart.h
cmake/: ArmToolchain.cmake  Device.cmake  IncludeList.cmake  MappedTarget.cmake  SourceList.cmake
lib/: Bit_Operations.h  Utils.h  std_types.h
simulation/: auto_cooler.pdsprj
src/: main.c
